--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     </header>
     <main>
         <div class="message">Player 1's turn</div>
-        <div class=""></div>
+        <div class="board">
+            <div class="position" position="0"></div>
+            <div class="position" position="1"></div>
+            <div class="position" position="2"></div>
+            <div class="position" position="3"></div>
+            <div class="position" position="4"></div>
+            <div class="position" position="5"></div>
+            <div class="position" position="6"></div>
+            <div class="position" position="7"></div>
+            <div class="position" position="8"></div>
+            <div class="position" position="9"></div>
+        </div>
     </main>
 </body>
 </html>
