Small html tweaks

--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
     <main>
         <div class="message">Player 1's turn</div>
         <div class="board">
-            <div class="position" position="0"></div>
-            <div class="position" position="1"></div>
-            <div class="position" position="2"></div>
-            <div class="position" position="3"></div>
-            <div class="position" position="4"></div>
-            <div class="position" position="5"></div>
-            <div class="position" position="6"></div>
-            <div class="position" position="7"></div>
-            <div class="position" position="8"></div>
-            <div class="position" position="9"></div>
+            <div class="position" data-index="0"></div>
+            <div class="position" data-index="1"></div>
+            <div class="position" data-index="2"></div>
+            <div class="position" data-index="3"></div>
+            <div class="position" data-index="4"></div>
+            <div class="position" data-index="5"></div>
+            <div class="position" data-index="6"></div>
+            <div class="position" data-index="7"></div>
+            <div class="position" data-index="8"></div>
+            <div class="position" data-index="9"></div>
+        </div>
+        <div>
+            <button class="reset-button" id="reset-button">Reset</button>
         </div>
     </main>
 </body>
