--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <main>
         <div class="message">Player 1's turn</div>
         <div class="board">
-            <div class="position" data-index="0"></div>
-            <div class="position" data-index="1"></div>
-            <div class="position" data-index="2"></div>
-            <div class="position" data-index="3"></div>
-            <div class="position" data-index="4"></div>
-            <div class="position" data-index="5"></div>
-            <div class="position" data-index="6"></div>
-            <div class="position" data-index="7"></div>
-            <div class="position" data-index="8"></div>
-            <div class="position" data-index="9"></div>
+            <div class="tile" data-index="0"></div>
+            <div class="tile" data-index="1"></div>
+            <div class="tile" data-index="2"></div>
+            <div class="tile" data-index="3"></div>
+            <div class="tile" data-index="4"></div>
+            <div class="tile" data-index="5"></div>
+            <div class="tile" data-index="6"></div>
+            <div class="tile" data-index="7"></div>
+            <div class="tile" data-index="8"></div>
+            <div class="tile" data-index="9"></div>
         </div>
         <div>
             <button class="reset-button" id="reset-button">Reset</button>
