--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
-    <script src="./app.js"></script>
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
@@ -13,7 +11,7 @@
         <h1 class="header">Tic-Tac-Toe</h1>
     </header>
     <main>
-        <div class="message">Player 1's turn</div>
+        <div class="message" id="message">Player 1's turn</div>
         <div class="board">
             <div class="tile" data-index="0"></div>
             <div class="tile" data-index="1"></div>
@@ -26,9 +24,10 @@
             <div class="tile" data-index="8"></div>
             <div class="tile" data-index="9"></div>
         </div>
-        <div>
+        <div class="button-container">
             <button class="reset-button" id="reset-button">Reset</button>
         </div>
     </main>
 </body>
+<script src="./app.js" defer></script>
 </html>
