JS finished. Needs some CSS cleanup esp. for responsiveness.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="header">Tic-Tac-Toe</h1>
     </header>
     <main>
-        <div class="message" id="message">Player 1's turn</div>
+        <div class="message" id="message">Player X's turn</div>
         <div class="board">
             <div class="tile" data-index="0"></div>
             <div class="tile" data-index="1"></div>
